Fix contrast issues in non-default themes
- Fix contrast of window text in Dark and Occult themes
- Fix contrast of Edit Colors luminosity arrow in Dark and Occult themes
- Add borders in Edit Colors in Modern theme (for contrast)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -702,8 +702,6 @@ html, body, .jspaint {
 	max-width: calc(100vw - 10px);
 	max-height: calc(100vh - 100px);
 	overflow: auto;
-	background: white;
-	color: black;
 }
 .history-entry {
 	cursor: pointer;
